--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,6 @@
     user-select: none;
    }
    .activeCard {
-    color: red;
-    background: pink;
+    color: rgb(0, 153, 255);
+    background: rgb(192, 251, 255);
    }
